--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <!-- banner  -->
 
         <div class="container mt-3 mb-5">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div id="carouselExampleDark" class="carousel slide bg-white" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <figure class="bg-dark">
+                    <div class="carousel-item active bg-white" data-bs-interval="10000">
+                        <figure class="bg-dark   rounded-2">
                             <img src="images/cover/cover-1.png"
                                 class="d-block w-100 border-5 opacity-50 img-fluid max-width: 100% h-auto" alt="...">
                         </figure>
@@ -77,36 +77,33 @@
                                 <p class="text-white mb-sm-0 p-small mb-lg-3">It is a long established fact that a
                                     reader will be distracted by the
                                     readable <br> content of a page when looking at its layout.</p>
-                                <button class="btn button-color text-white small-button" type="submit">Get
+                                <button class="btn button-color text-white small-button hov" type="submit">Get
                                     Started</button>
                             </div>
 
                         </div>
                     </div>
-
-
-                    <!-- <div class="carousel-item" data-bs-interval="10000">
-                        <img src="images/cover/cover-2.jpg" class="d-block w-100 border-5  opacity-50" alt="...">
-                    </div>
-                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="fs-1 fw-bolder text-white">Get Started Digital <br> Learning</h1>
-                        <p class="text-white">It is a long established fact that a reader will be distracted by the
-                            readable <br>
-                            content of
-                            a page when looking at its layout.</p>
-                        <button class="btn button-color text-white" type="submit">Get Started</button>
-                    </div>
                     <div class="carousel-item" data-bs-interval="10000">
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100 border-5  opacity-50" alt="...">
+                        <figure class="bg-dark rounded-2">
+                            <img src="images/cover/cover-3.jpg"
+                                class="d-block w-100 border-5 opacity-50 img-fluid max-width: 100% h-auto" alt="...">
+                        </figure>
+                        <div class="carousel-caption res">
+                            <div class="d-flex flex-column justify-content-center align-items-center">
+                                <span>
+                                    <h1 class="fw-bolder text-white h1-size-small mb-sm-0 mb-lg-3">Get Started Digital
+                                        <br> Learning
+                                    </h1>
+                                </span>
+                                <p class="text-white mb-sm-0 p-small mb-lg-3">It is a long established fact that a
+                                    reader will be distracted by the
+                                    readable <br> content of a page when looking at its layout.</p>
+                                <button class="btn button-color text-white small-button hov" type="submit">Get
+                                    Started</button>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="fs-1  fw-bolder text-white">Get Started Digital <br> Learning</h1>
-                        <p class="text-white">It is a long established fact that a reader will be distracted by the
-                            readable <br>
-                            content of
-                            a page when looking at its layout.</p>
-                        <button class="btn button-color text-white" type="submit">Get Started</button>
-                    </div> -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
                     data-bs-slide="prev">
@@ -142,16 +139,15 @@
 
         <div class="container row row-cols-1 row-cols-lg-2 gap-5 mx-auto justify-content-center mb-5">
             <div class="card mb-auto p-0" style="max-width: 540px;">
-                <div class="d-flex flex-lg-row flex-column">
-                    <div class="col-md-4 ">
-                        <img src="images/course/course-1.png" class="img-fluid" alt="...">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-1.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
                         </div>
                     </div>
                 </div>
@@ -159,14 +155,14 @@
             <div class="card mb-auto p-0" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                        <img src="images/course/course-2.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Javascript Basic to advanced</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
+
                         </div>
                     </div>
                 </div>
@@ -174,14 +170,14 @@
             <div class="card mb-auto p-0" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                        <img src="images/course/course-3.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Fullstack Web Development</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
+
                         </div>
                     </div>
                 </div>
@@ -189,14 +185,14 @@
             <div class="card mb-auto p-0" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                        <img src="images/course/course-4.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Digital Marketing</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
+
                         </div>
                     </div>
                 </div>
@@ -204,42 +200,43 @@
             <div class="card mb-auto p-0" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                        <img src="images/course/course-5.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Photography Basic Rules</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
+
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-auto mt-auto p-0" style="max-width: 540px;">
+            <div class="card mb-auto p-0" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                        <img src="images/course/course-6.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 mt-3">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Motion Grapics</h5>
+                            <p class="card-text dark3">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h5 class="card-title pricecolor">Price : $20</h5>
+
                         </div>
                     </div>
                 </div>
             </div>
+            
         </div>
         <div class="container d-flex justify-content-center mb-5">
-            <button type="button" class="btn button-color text-white">See more courses</button>
+            <button type="button" class="btn button-color text-white hov">See more courses</button>
         </div>
 
         <!-- course section end  -->
 
         <div
-            class="container gap-5 d-flex flex-lg-row justify-content-lg-between img-back p-0 align-items-center flex-column align-items-center justify-content-center mt-lg-5 mb-lg-5">
+            class="container mt-5 mb-5 gap-5 d-flex flex-lg-row justify-content-lg-between img-back p-0 align-items-center flex-column align-items-center justify-content-center mt-lg-5 mb-lg-5">
             <div>
                 <img class="img-fluid" src="images/working.png" alt="">
             </div>
@@ -270,13 +267,13 @@
                         <p class="dark3">Rating & Review</p>
                     </div>
                 </div>
-                <button type="button" class="btn button-color text-white">Read More</button>
+                <button type="button" class="btn button-color text-white hov">Read More</button>
             </div>
         </div>
 
         <!-- ready  -->
 
-        <div class="container card text-center button-color mb-lg-5 p-lg-5">
+        <div class="container card text-center button-color mb-lg-5 p-lg-5 mb-5">
             <div class="card-body  d-flex flex-lg-row flex-column justify-content-between align-items-center">
                 <div>
                     <h1 class="text-white">Ready to join?</h1>
@@ -345,7 +342,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container d-lg-flex justify-content-lg-center justify-content-sm-center mb-5 d-md-none">
+            <div class="container d-lg-flex justify-content-lg-center d-flex justify-content-center mb-5 d-md-none">
                 <button type="button" class="btn button-color text-white">View all</button>
             </div>
         </div>
@@ -363,8 +360,8 @@
             </p>
         </div>
 
-        <div class="container d-flex flex-column flex-lg-row justify-content-between mb-5">
-            <div class="p-5 course-border shadow-lg">
+        <div class="container d-flex flex-column d-md-flex flex-md-column flex-lg-row justify-content-lg-evenly justify-content-md-between mb-5">
+            <div class="ps-5 pe-5 pb-3 pt-3 course-border shadow-sm">
                 <div class="d-flex flex-row justify-content-between mb-3">
                     <img src="images/comma.png" alt="">
                     <div>
@@ -389,7 +386,7 @@
                     </div>
                 </div>
             </div>
-            <div class="p-5 course-border shadow-lg">
+            <div class="ps-5 pe-5 pb-3 pt-3 course-border shadow-sm">
                 <div class="d-flex flex-row justify-content-between mb-3">
                     <img src="images/comma.png" alt="">
                     <div>
@@ -417,7 +414,7 @@
 
         </div>
 
-        <div class="container d-lg-none d-md-flex d-sm-flex justify-content-center mb-5">
+        <div class="container d-lg-none d-md-flex d-flex justify-content-center mb-5">
             <button type="button" class="btn button-color text-white">View all</button>
         </div>
 
@@ -437,7 +434,7 @@
 
         <!-- Questions  -->
         <div class="container ps-5 pe-5 mb-5">
-            <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion m-lg-5" id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -501,7 +498,7 @@
             </div>
         </div>
 
-        <div class="d-md-none d-sm-none d-lg-flex flex-column">
+        <div class="d-md-none d-none d-lg-flex flex-column">
             <h1 class="dark1 text-center mb-3">
                 Trusted by over 800+ companies
             </h1>
